--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #C25100;
+    background-color: #207aec;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -11,11 +11,11 @@
 }
 
 .content {
-    margin-left: 40px;
+    margin-left: 400px;
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'fantasy', cursive;
 }
 
 .date {
@@ -47,5 +47,5 @@ h1, h2, h3, h4 {
 
 .comment {
     margin: 20px 0px 20px 20px;
-    color: #C25100;
+    color: #207aec;
 }
